# DotLMViz

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  package-lock.json  pyproject.toml  test.py
DoTLMViz/: __init__.py  activations.py  ckpted_transformer.py  converter.py  hooked_transformer.py  utils.py
DoTLMViz/core/: __init__.py  ckpt.py  hook.py
DoTLMViz/datamodules/: __init__.py  piles_10k.py
DoTLMViz/metadata/: piles_10k.py
DoTLMViz/transformers/: __init__.py  attention.py  config.py  embedding.py  layernorm.py  mlp.py  transformer.py
backend/: __init__.py  ckpt.py  dimred.py  model.py  rand.py  utils.py
docs/: CkptedTransformer.md
frontend/: index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tailwind.config.ts  vite.config.ts
frontend-try/: App.svelte  package-lock.json  package.json
frontend-try/src/components/: Embedding.svelte  TransformerBlock.svelte  Unembedding.svelte
frontend-try/src/routes/: +page.svelte
frontend/src/: App.svelte  app.css  app.html  callbacks.svelte.ts  eventstate.svelte.ts  state.svelte.ts  types.svelte.ts
frontend/src/components/: BlockBase.svelte  DottedBlockBase.svelte  (+12 more)
notebooks/: bpe.ipynb  ckptedtransformer.ipynb  kde.ipynb  sampler.ipynb
notebooks/model/: 0_loading.ipynb  1_comparing.ipynb
notebooks/training/: 0_baseline.ipynb
notebooks/visualization/: 0_output_distribution.ipynb  1_embeddings.ipynb
src/DoTLMViz/: __init__.py  ckpted_transformer.py  converter.py  kde.py  sampler.py  utils.py
tests/: test_transformer.py
tests/decomposition/: test_pca.py
(+35 files in other folders)
