[project]
name = "DoTLMViz"
version = "0.1.0"
dependencies = [
    "jaxtyping",
]

[project.optional-dependencies]
test = [
    "pytest"
]

docs = [
    "mkdocs",
    "mkdocstrings-python",
    "mkdocs-material"
]

others = [
    "pre-commit"
]

lint = [
    "ruff"
]

dev = [
    "DoTLMViz[test, docs, others, lint]"
]

[project.urls]
Repository = "https://github.com/Arktetra/DoTLMViz.git"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E722", "E731", "F722"]
